examples/test/testpolicy16599.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16599
  namespace: namespace367
spec:
  podSelector:
    matchLabels:
      key11: value9
      key24: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value34
          key39: value36
          key34: value46
      podSelector:
        matchLabels:
          key35: value32
